--- a/www/recipes/cherry-crumb.html
+++ b/www/recipes/cherry-crumb.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Cherry Crumb</title>
-    <link rel="stylesheet" type="text/css" href="./main.css">
+    <link rel="stylesheet" type="text/css" href="/main.css">
   </head>
 
   <body>
@@ -11,9 +11,9 @@
     </div>
 
     <div class="topnav">
-      <a href="/index.html">Home</a>
-      <a href="/articles.html">Articles</a>
-      <a href="/recipes.html">Recipes</a>
+      <a href="/">Home</a>
+      <a href="/articles">Articles</a>
+      <a href="/recipes">Recipes</a>
       <a href="/about.html">About</a>
     </div>
 
@@ -47,7 +47,7 @@
       </div> 
 
       <div class="image">
-        <img src="img/placeholder.jpg" />
+        <img src="/img/placeholder.jpg" />
       </div>
 
     </div> 
